Color contrast fix

--- a/Assignment10/style.css
+++ b/Assignment10/style.css
@@ -65,7 +65,7 @@ footer {
 }
 
 h1, h2 {
-    color: #01948b;
+    color: #006e66;
   }
 
   h3 {
